# skiena-problems

./: .gitignore  README.md  main.typ  rustfmt.toml  triangulation-0.json  triangulation-1.json  triangulation-2.json
code/: Cargo.toml  justfile  rust-toolchain.toml  rustfmt.toml
code/chapter1/: Cargo.toml
code/chapter1/src/: lib.rs  matrix.rs
code/chapter1/src/matrix/: borrowed.rs  buffer.rs  errors.rs  raw_matrix.rs  tests.rs
code/macros/: Cargo.toml
code/macros/src/: lib.rs
code/visualizer/: Cargo.toml  helix-log
code/visualizer/src/: lib.rs
proofs/: p1-1.dfy  p1-2.dfy  p1-3.dfy  p1-4.dfy  p1-5.dfy  p1-6.dfy  p1-7.dfy  p1-8.dfy  p1-9.dfy
