[workspace]
resolver = "3"
members = ["chapter1", "macros", "visualizer"]

[workspace.lints.clippy]
pedantic = "warn"
cargo = "warn"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Problems from Skiena's The Algorithm Design Manual, 3rd ed."
readme = "./README.md"
repository = "https://github.com/dybucc/skiena-problems"
keywords = ["algorithms", "data-structres", "dsa"]
categories = ["algorithms", "data-structures", "mathematics"]
license = "LGPL-2.1-only"
