[package]
name = "chapter1"
version = "0.1.0"
edition = "2024"
keywords.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
itertools = "0.14.0"
macros = { path = "../macros" }
num-traits = "0.2.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[lints]
workspace = true
